--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
             android:background="@drawable/rect_drawable"
             android:gravity="center"
             android:padding="10dp"
+            android:tag="0"
             android:text="CLICK"
             android:textColor="#000000"
             android:textSize="18sp"
