--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:gravity="center"
             android:padding="10dp"
             android:tag="0"
-            android:text="CLICK"
+            android:text="login(card)"
             android:textColor="#000000"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -38,7 +38,7 @@
             android:background="@drawable/rect_drawable"
             android:gravity="center"
             android:padding="10dp"
-            android:text="CONVERSION"
+            android:text="viewProd(modal)"
             android:textColor="#000000"
             android:textSize="18sp"
             app:layout_constraintLeft_toRightOf="@id/dot_click"
@@ -54,7 +54,7 @@
             android:background="@drawable/rect_drawable"
             android:gravity="center"
             android:padding="10dp"
-            android:text="PURCHASE"
+            android:text="add_cart(banner)"
             android:textColor="#000000"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
